--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.4",
+    "@taoqf/quill-image-resize-module": "^3.0.1",
     "bootstrap": "^5.3.0",
     "jquery": "^3.7.0",
     "popper.js": "^1.16.1",
+    "quill": "^1.3.6",
+    "quill-html-edit-button": "^2.2.12",
+    "quill-image-drop-module": "^1.0.3",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
