feat: database PW use config/credentials

--- a/config/database.yml
+++ b/config/database.yml
@@ -82,5 +82,7 @@ test:
 production:
   <<: *default
   database: blog_production
-  username: blog
-  password: <%= ENV['BLOG_DATABASE_PASSWORD'] %>
+  host: localhost
+  pool: 25
+  username: postgres
+  password: <%= Rails.application.credentials.database_password %>
